# SJTU_GKC_4A_OpenSource

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
AGC/: .cproject  README.md  main.c
COSTAS/: CMakeLists.txt  README.md  project0904.uvopt  project0904.uvproj
COSTAS/BoardSupport/: AD9850_func.c  AD9850_func.h  LCD_Driver_Modified.c  LCD_Driver_Modified.h  Scan_6Key.c  Scan_6Key.h  adc_sample.c  adc_sample.h
COSTAS/COSTASProject/: UIFUNC0728.c  UIFUNC0728.h  app_state.c  app_state.h  costas_loop.c  costas_loop.h  main_source.c
COSTAS/Dependencies/Include/Driver/: DrvUART.h
TxBoard/: README.md  ad9850_serial.c  ad9850_serial.h  dds-ser.uvoptx  dds-ser.uvprojx  dds_ser_main.c  tm1638.c
TxBoard/RTE/_Target_1/: RTE_Components.h
TxBoard/driverlib/rvmdk/: driverlib.lib
baseband/: .cproject  .project  README.md  main.c
docs/: encoding.md  hardware-wiring.md  import-and-build.md
